--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -15,4 +16,8 @@
   .grid-cols-auto {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
+}
+
+*{
+  font-family: Outfit;
 }
